# Scarlet_mod

./: .gitignore  pyproject.toml
src/: main.py  requirements.txt  utils.py
src/algorithm/: base.py  cfd.py  comet.py  dsfl.py  scarlet.py  selectivefd.py
src/config/: config.yaml
src/config/algorithm/: scarlet.yaml
src/dataset/: partitioned_dataset.py
src/model/: lenet5.py  model.py
